# rust-icons

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  Makefile  README.md  netlify.toml
.claude/skills/: antfu-style.md  rust-icons.md
.github/workflows/: ci.yml
.opencode/: config.toml
.zed/: settings.json
crates/core/: Cargo.toml
crates/core/src/: lib.rs  search.rs  snippets.rs  svg.rs  types.rs
crates/leptos-icons/: Cargo.toml  Trunk.toml  design-tokens.css  index.html  style.css
crates/leptos-icons/src/: api.rs  app.rs
crates/leptos-icons/src/components/: collection_card.rs  collection_grid.rs  icon_detail.rs  icon_grid.rs  mod.rs  modal.rs  navbar.rs  search_bar.rs  theme_toggle.rs
crates/leptos-icons/src/pages/: collection.rs  home.rs
icones-redesign/: design-system.md  index.html  package-lock.json  package.json  pnpm-lock.yaml
icones-redesign/src/: App.tsx  data.ts
icones-redesign/src/pages/: CollectionDetail.tsx  CollectionHome.tsx  CollectionHome2.tsx  DesignBauhaus.tsx  DesignCandy.tsx  DesignDarkroom.tsx  DesignInk.tsx  DesignTerminal.tsx  Design_Daily.tsx  Home.tsx
