[package]
name = "leptos-icons"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
rust-icons-core = { path = "../core" }
leptos = { version = "0.7", features = ["csr"] }
leptos_router = { version = "0.7" }
gloo-net = { version = "0.6", features = ["http", "json"] }
serde = { workspace = true }
web-sys = { version = "0.3", features = [
    "Window",
    "Navigator",
    "Clipboard",
    "Document",
    "HtmlInputElement",
    "HtmlElement",
    "MouseEvent",
    "Blob",
    "BlobPropertyBag",
    "Url",
] }
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
